kubernetes_haproxy_ingress_controller/examples/test-acl-haproxy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-prod
  namespace: haproxy-itn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-prod
  template:
    metadata:
      labels:
        app: echo-prod
    spec:
      containers:
        - name: echo-prod
          image: hashicorp/http-echo:latest
          args:
          - -text="prod"
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: echo-prod
  namespace: haproxy-itn
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
      targetPort: http
  selector:
    app: echo-prod
---
# STAGING
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-staging
  namespace: haproxy-itn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-staging
  template:
    metadata:
      labels:
        app: echo-staging
    spec:
      containers:
        - name: echo-staging
          image: hashicorp/http-echo:latest
          args:
          - -text="staging"
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: echo-staging
  namespace: haproxy-itn
  annotations:
    route-acl: "rand(100) lt 25"
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
      targetPort: http
  selector:
    app: echo-staging
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: echo
  namespace: haproxy-itn
spec:
  rules:
  - host: haproxy.itn.internal.devopslab.pagopa.it
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: echo-prod
              port:
                name: http
        - pathType: ImplementationSpecific
          backend:
            service:
              name: echo-staging
              port:
                name: http
